crates/gridwell-writer-typst/tests/snapshots/snapshots__align-left-center-right.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto,),
  align: (left, center, right,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Left]],
    [#text(weight: "bold")[Center]],
    [#text(weight: "bold")[Right]],
    table.hline(stroke: 0.5pt),
  ),
  [aaa],
  [bbb],
  [ccc],
  [d],
  [e],
  [f],
)
