crates/gridwell-writer-typst/tests/snapshots/snapshots__cell-colors.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Label]],
    [#text(weight: "bold")[Temp]],
    table.hline(stroke: 0.5pt),
  ),
  [Fire],
  table.cell(fill: rgb("#C0392B"))[#text(fill: rgb("#FFFFFF"))[hot]],
  [Ice],
  table.cell(fill: rgb("#2980B9"))[#text(fill: rgb("#FFFFFF"))[cold]],
)
