crates/gridwell-writer-typst/tests/snapshots/snapshots__colspan-basic.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto,),
  align: (left, right, right,),
  stroke: none,
  table.header(
    [],
    table.cell(colspan: 2, align: center)[#text(weight: "bold")[Scores]],
    [#text(weight: "bold")[Name]],
    [#text(weight: "bold")[Q1]],
    [#text(weight: "bold")[Q2]],
    table.hline(stroke: 0.5pt),
  ),
  [Alice],
  [90],
  [95],
  [Bob],
  [85],
  [88],
)
