crates/gridwell-writer-typst/tests/snapshots/snapshots__combining-chars.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Form]],
    [#text(weight: "bold")[Text]],
    table.hline(stroke: 0.5pt),
  ),
  [composed],
  [café],
  [decomposed],
  [café],
  [stacked],
  [à́̂],
)
