crates/gridwell-writer-typst/tests/snapshots/snapshots__conditional-striping.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Index]],
    [#text(weight: "bold")[Value]],
    table.hline(stroke: 0.5pt),
  ),
  table.cell(fill: rgb("#ECF0F1"))[0],
  table.cell(fill: rgb("#ECF0F1"))[a],
  [1],
  [b],
  table.cell(fill: rgb("#ECF0F1"))[2],
  table.cell(fill: rgb("#ECF0F1"))[c],
  [3],
  [d],
)
