crates/gridwell-writer-typst/tests/snapshots/snapshots__fixed-table-width.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto,),
  align: (left, left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[A]],
    [#text(weight: "bold")[B]],
    [#text(weight: "bold")[C]],
    table.hline(stroke: 0.5pt),
  ),
  [1],
  [2],
  [3],
)
